# mecanum_controller

./: CMakeLists.txt  README.md  mecanum_controller_plugins.xml  package.xml
cfg/: mecanum_controller.cfg
include/mecanum_controller/: mecanum_controller.h  odometry.h  speed_limiter.h  wheel_kinematics.h
src/: mecanum_controller.cpp  odometry.cpp  speed_limiter.cpp  wheel_kinematics.cpp
