<?xml version="1.0"?>
<package format="2">
  <name>mecanum_controller</name>
  <version>0.0.0</version>
  <description>The mecanum_controller package</description>

  <maintainer email="samuel@dynorobotics.se">Samuel Lindgren</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>nav_msgs</depend>
  <depend>realtime_tools</depend>
  <depend>tf</depend>
  <depend>urdf</depend>
  <depend>urdf_geometry_parser</depend>

  <export>
    <controller_interface plugin="${prefix}/mecanum_controller_plugins.xml"/>
  </export>
</package>
